objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__Action__c</fullName>
        <description>The action desired for this line item with values of Add, Change, Existing or Disconnect. Existing means no change is requested. Add is a request to add the item, Change is a request to change it. Disconnect is a request to remove it.</description>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Disconnect</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
                <value>
                    <fullName>Suspend</fullName>
                </value>
                <value>
                    <fullName>Resume</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AssetReferenceId__c</fullName>
        <description>Unique identifier of the asset referenced by this line item. Used by Vlocity CPQ to track the asset across various objects in the asset-based ordering lifecycle.</description>
        <externalId>true</externalId>
        <label>Asset Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AsyncOperation__c</fullName>
        <description>This stores the asynchronous operation name for which this opportunity line item is locked.</description>
        <inlineHelpText>This stores the asynchronous operation name for which this opportunity line item  is locked.</inlineHelpText>
        <label>Async Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Validate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeMetadataChanges__c</fullName>
        <label>Attribute Metadata Changes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeSelectedValues__c</fullName>
        <label>Attribute Selected Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BaseOneTimeCharge__c</fullName>
        <description>Holds the one-time charge of the opportunity products before applying overrides and adjustments.</description>
        <label>Base One Time Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BaseOneTimeTotal__c</fullName>
        <description>Holds the total one-time charge including rollups of the children and multiplied by the line&apos;s quantity.</description>
        <label>Base One Time Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BaseRecurringCharge__c</fullName>
        <description>Holds the recurring charge of the opportunity products before applying overrides or adjustments.</description>
        <label>Base Recurring Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BaseRecurringTotal__c</fullName>
        <description>Holds the total recurring charges including rollups of the children and multiplied by the line&apos;s quantity.</description>
        <label>Base Recurring Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BillingAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the account responsible for paying for the line item.</description>
        <label>Billing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Products</relationshipLabel>
        <relationshipName>BillingAccountOpportunityProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CatalogItemReferenceDateTime__c</fullName>
        <description>Represents the date and time a product is added to the cart. With versioning enabled, Reference Time value is used to render the bundle structure with valid child products to ensure valid configuration.</description>
        <label>Reference Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ConnectDate__c</fullName>
        <label>Connect Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CpqCardinalityMessage__c</fullName>
        <label>Cpq Cardinality Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CpqMessageData__c</fullName>
        <label>Cpq Message Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CpqPricingMessage__c</fullName>
        <label>Cpq Pricing Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CurrencyPaymentMode__c</fullName>
        <label>Currency Payment Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Loyalty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DisconnectDate__c</fullName>
        <label>Disconnect Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveBaseOneTimeTotal__c</fullName>
        <description>Calculated only for the root. The value is the same as the Base One Time Total of the root item. This field is 0.0 for non-root item.</description>
        <label>Effective Base One Time Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveBaseRecurringTotal__c</fullName>
        <description>Calculated only for the root. The value is the same as the Base Recurring Total of the root item. This field is 0.0 for non-root item.</description>
        <label>Effective Base Recurring Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOneTimeCostTotal__c</fullName>
        <label>Effective One Time Cost Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOneTimeLoyaltyTotal__c</fullName>
        <label>Effective One Time Loyalty Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOneTimeTotal__c</fullName>
        <label>Effective One Time Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveQuantity__c</fullName>
        <label>Effective Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveRecurringCostTotal__c</fullName>
        <label>Effective Recurring Cost Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveRecurringTotal__c</fullName>
        <label>Effective Recurring Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveUsageCostTotal__c</fullName>
        <description>Effective Usage Cost Total</description>
        <label>Effective Usage Cost Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveUsagePriceTotal__c</fullName>
        <description>Effective Usage Price Total</description>
        <label>Effective Usage Price Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveUsageQuantity__c</fullName>
        <label>Effective Usage Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Filter__c</fullName>
        <label>Filter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FinancedAmountTotal__c</fullName>
        <description>Rollup of the Financed Amount.</description>
        <label>Financed Amount Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FinancedAmount__c</fullName>
        <description>Stores the total amount to be paid to the finance provider.</description>
        <label>Financed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FinancedInstallmentAmount__c</fullName>
        <description>Stores the installment amount to be paid each month to the finance provider.</description>
        <label>Financed Installment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__InCartQuantityMap__c</fullName>
        <description>JSON field calculated by Vlocity with the following structure: {&quot;[childProductId]&quot;: [quantity], ....} that describes the child item quantities that roll-up to the quantity of this item. For example, {&quot;01t0O00000BPrs1QAD&quot;:1,&quot;01t0O00000BPrrwQAD&quot;:1}.The quantity value is the sum of quantities for that product across all instances on the child items. For example, if two child assets exist of type Product A, the first with quantity 2 and the second with quantity 1, the map quantity for Product A should be 3. Helps CPQ identify quantities and enforce cardinality rules. Populated for all items that have direct children, but it is not populated for virtual products or items with no children. Also, child virtual products are not included in the map on their parent item.</description>
        <label>InCartQuantityMap</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsProductTrackAgreement__c</fullName>
        <description>Denotes if product is tracked as part of agreement</description>
        <formula>PricebookEntry.Product2.vlocity_cmt__TrackAsAgreement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Product Track Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ItemName__c</fullName>
        <label>Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JSONAttribute__c</fullName>
        <description>JSON body containing Vlocity Attribute value data.</description>
        <label>JSONAttribute</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JSONNode__c</fullName>
        <label>JSONNode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LineNumber__c</fullName>
        <description>Vlocity line number generated by code which serves to sequence the line items and organize them into a hierarchy.</description>
        <label>Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LockedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This indicates if an opportunity line item is locked by a user.</description>
        <inlineHelpText>This indicates if an opportunity line item is locked by a user.</inlineHelpText>
        <label>Locked By User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Opportunity Line Items</relationshipLabel>
        <relationshipName>OpportunityLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LockedFor__c</fullName>
        <description>This stores the reason for doing lock on the opportunity line item.</description>
        <inlineHelpText>This stores the reason for doing lock on the opportunity line item.</inlineHelpText>
        <label>Locked For</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Async Operation</fullName>
                </value>
                <value>
                    <fullName>Manual Edit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Modification__c</fullName>
        <label>Modification#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeCalculatedPrice__c</fullName>
        <description>System discounted price, so Unit Price after any modifications from Pricer run.</description>
        <label>One Time Calculated Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeCharge__c</fullName>
        <label>One Time Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeCostTotal__c</fullName>
        <label>One Time Cost Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeCost__c</fullName>
        <label>One Time Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeDiscountPrice__c</fullName>
        <description>Price after manual discount applied.</description>
        <label>One Time Discount Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeLoyaltyPrice__c</fullName>
        <label>One Time Loyalty Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeLoyaltyTotal__c</fullName>
        <label>One Time Loyalty Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeManualDiscount__c</fullName>
        <description>Manual discount entered by the CSR</description>
        <label>One Time Manual Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeMargin__c</fullName>
        <label>One Time Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeTotal__c</fullName>
        <label>One Time Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OpportunityGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To assign group to line item</description>
        <label>Opportunity Group</label>
        <referenceTo>vlocity_cmt__OpportunityGroup__c</referenceTo>
        <relationshipLabel>Opportunity Line Items</relationshipLabel>
        <relationshipName>OpportunityLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OpportunityMemberId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To assign member to line item</description>
        <label>Opportunity Member</label>
        <referenceTo>vlocity_cmt__OpportunityMember__c</referenceTo>
        <relationshipLabel>Opportunity Line Items</relationshipLabel>
        <relationshipName>OpportunityLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverageCalculatedPrice__c</fullName>
        <description>System generated price based on Overage Charge</description>
        <label>Overage Calculated Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverageCharge__c</fullName>
        <description>Standard overage charge for particular UOM</description>
        <label>Overage Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverageDiscountPrice__c</fullName>
        <description>Price after manual discount</description>
        <label>Overage Discount Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverageManualDiscount__c</fullName>
        <description>Manual discount entered by CSR</description>
        <label>Overage Manual Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverageTotal__c</fullName>
        <label>Overage Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverageUOM__c</fullName>
        <description>Unit of measure for the Overage charge</description>
        <label>Overage UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Per Minute</fullName>
                </value>
                <value>
                    <fullName>Per Text</fullName>
                </value>
                <value>
                    <fullName>Per Gigabyte</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentItemId__c</fullName>
        <description>ID of the parent Opportunity Product. Used by Vlocity CPQ to track the hierarchy of items.</description>
        <label>ParentItemId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PremisesId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Premises</label>
        <referenceTo>vlocity_cmt__Premises__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>OpportunityProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PricingLogData__c</fullName>
        <description>Detailed pricing log information for this item stored as a JSON structure. The JSON records the detailed prices, adjustments and interim calculations which result in the price to the customer.</description>
        <label>Pricing Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Product2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED. Use the standard Product2Id field.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductAttribXN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED. Use JSONAttribute__c.</description>
        <label>ProductAttribXN</label>
        <referenceTo>vlocity_cmt__ProductAttribXN__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductGroupKey__c</fullName>
        <description>Version Group Key of Product</description>
        <formula>PricebookEntry.Product2.vlocity_cmt__GlobalGroupKey__c</formula>
        <inlineHelpText>Version Group Key of Product</inlineHelpText>
        <label>Product Group Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductHierarchyGroupKeyPath__c</fullName>
        <description>Stores the resulting string obtained by replacing every Product Id in the Product Hierarchy Path with its Version Group key</description>
        <inlineHelpText>Stores the resulting string obtained by replacing every Product Id in the Product Hierarchy Path with its Version Group key</inlineHelpText>
        <label>Product Hierarchy Group Key Path</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductHierarchyPath__c</fullName>
        <description>Vlocity internal field which identifies the path for this item within the product hierarchy.</description>
        <label>Product Hierarchy Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProvisioningStatus__c</fullName>
        <description>(NOTE: The functionality of this field is replaced by the Action, Sub-Action and Fulfilment Status fields.) The desired provisioning action for the asset identified on this line item. Values include New (add), Active (no change), Changed or Deleted.</description>
        <label>Provisioning Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Query__c</fullName>
        <label>Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringCalculatedPrice__c</fullName>
        <description>System discounted price after Recurring Charge goes through Pricer</description>
        <label>Recurring Calculated Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringCharge__c</fullName>
        <description>Beginning recurring charge for an item</description>
        <label>Recurring Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringCostTotal__c</fullName>
        <label>Recurring Cost Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringCost__c</fullName>
        <label>Recurring Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringDiscountPrice__c</fullName>
        <description>Price after manual discount</description>
        <label>Recurring Discount Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringManualDiscount__c</fullName>
        <description>Manual discount entered by CSR</description>
        <label>Recurring Manual Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringMargin__c</fullName>
        <label>Recurring Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringTotal__c</fullName>
        <label>Recurring Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringUOM__c</fullName>
        <description>Unit of measure for Recurring Charge</description>
        <label>Recurring UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                    <default>true</default>
                    <label>Monthly</label>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RelationshipType__c</fullName>
        <label>RelationshipType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Child</fullName>
                    <default>true</default>
                    <label>Child</label>
                </value>
                <value>
                    <fullName>Realization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ReliesOnItemId__c</fullName>
        <description>Identifies the Asset Reference Id of an item or asset that this item depends on. This field can identify only one of the items on which this item relies. When multiple dependencies exist, relies on relationships should be tracked in the Opportunity Product Relationship object.</description>
        <externalId>true</externalId>
        <label>Relies on Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RootItemId__c</fullName>
        <description>ID of the ultimate, top-level parent Opportunity Product. Used by Vlocity CPQ to track a full tree of items.</description>
        <label>RootItemId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SequenceNumber__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SerialNumber__c</fullName>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the account that identifies the service location or subscriber that is the user of the service.</description>
        <label>Service Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Products</relationshipLabel>
        <relationshipName>ServiceAccountOpportunityProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceDate__c</fullName>
        <description>Date service to start</description>
        <label>Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceIdentifier__c</fullName>
        <description>Unique identifier of the service used by the customer.</description>
        <externalId>true</externalId>
        <label>Service Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServicePointId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Service Point associated with this Opportunity line item.</description>
        <label>Service Point</label>
        <referenceTo>vlocity_cmt__ServicePoint__c</referenceTo>
        <relationshipLabel>Opportunity Products</relationshipLabel>
        <relationshipName>OpportunityProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SubAction__c</fullName>
        <description>The sub-action requested for this line item typically used for moves of service from one location to another with values of Move-Add and Move-Delete. Move-Add means this item is being added as part of the move and usually should be added before the previous service is disconnected. Move-Delete means this item is the service to be disconnected after the service is activated at the new location.</description>
        <label>Sub Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Move</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Replace</fullName>
                </value>
                <value>
                    <fullName>Reassign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SubscriptionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subscription that this item describes.</description>
        <label>Subscription</label>
        <referenceTo>vlocity_cmt__Subscription__c</referenceTo>
        <relationshipLabel>Opportunity Products</relationshipLabel>
        <relationshipName>OpportunityProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UsageCostTotal__c</fullName>
        <description>Usage Cost Total</description>
        <label>Usage Cost Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UsageMargin__c</fullName>
        <description>Usage Margin</description>
        <label>Usage Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UsageMeasurementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This reference to Charge Measurement for usage pricing.</description>
        <label>Usage Unit of Measure</label>
        <referenceTo>vlocity_cmt__ChargeMeasurement__c</referenceTo>
        <relationshipLabel>Opportunity Products</relationshipLabel>
        <relationshipName>OpportunityLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UsagePriceTotal__c</fullName>
        <description>Usage Price Total</description>
        <label>Usage Price Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UsageQuantity__c</fullName>
        <description>Usage Quantity</description>
        <label>Usage Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UsageUnitCost__c</fullName>
        <description>Usage Cost</description>
        <label>Usage Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UsageUnitPrice__c</fullName>
        <description>Usage Price</description>
        <label>Usage Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
</CustomObject>